<resources>
    <string name="app_name">StepAppV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="num_steps">0</string>
    <string name="goal">Goal: 6000</string>
    <string name="steps">Steps</string>
    <string name="start_text">Start</string>
    <string name="favorite">Favourite</string>
    <string name="content_description_favorite">Your favourites!</string>
    <string name="settings">Settings</string>
    <string name="content_description_search">You can find the settings here</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="goalText">Goal: 6000</string>
    <string name="twCounter">0</string>

</resources>