<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_steps">

    <fragment
        android:id="@+id/nav_steps"
        android:name="com.example.stepappv2.ui.home.HomeFragment"
        android:label="@string/steps"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.stepappv2.ui.gallery.GalleryFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.stepappv2.ui.slideshow.SlideshowFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_slideshow" />

</navigation>